# dw_util

./: .gitignore  License  README.md  pyproject.toml  requirements.txt  setup.py
dw_util/: abstract.py  classes.py  codebase.py  standalone.py  todo.md
tests/: test_core.py
usage/: k_colour.py
