[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dw_util"
version = "0.1.0"
description = "Utilities for D-Wave quantum computing"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/dw_util"
"Bug Tracker" = "https://github.com/yourusername/dw_util/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 