[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dw_util"
version = "0.1.0"
description = "Utilities for domain wall encoding of QUBO problems"
authors = [
    { name = "David Headley"}
]
license = "Copyright 2024 David Headley"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 